# continue-code-rag

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/embed/: __init__.py  code_x_embed.py  jina_code_v2_embed.py  sfr_embedding_code_2b.py  voyagai_tokens_count.py  voyage_ai_code_embed_test.py  voyageai_code_embed.py
src/httpserver/: __init__.py
src/lancedb/: embed_query.py
src/script/: git_python.py
src/spliter/: code_spliter.py  llama_index_code_spliter.py  sweep_ai_code_spliter.py
src/translate/: tencent_smart_trans.py
src/util/: custom_thread_local.py
tests/: __init__.py  general_test.py  merge_insert_test.py  sfr_codex_embed_test.py  test_tmt.py  transfer_db_test.py  voyage_ai_code_embed_test.py
