[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Yuan Fang <yuanfang5366@gmail.com>"]
description = "a code rag http server for plugins like continue"
exclude = ["**/BUILD"]
keywords = ["LLM", "RAG", "Continue"]
license = "MIT"
name = "continue-code-rag"
packages = [{include = "src"}]
readme = "README.md"
repository = "https://github.com/yuan413/continue-code-rag"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.8"
llama-index = "^0.12.20"
lancedb = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
